// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/pub/update updateDependency replaces nested value 1`] = `
"dev_dependencies:
  test: 0.1
  build:
    version: 0.1

dependencies:
  bar:
    sdk: flatter
  foo: 1
  bar:
    version: 1.2.3
  baz:
    non-sense: true
  qux: false
"
`;

exports[`manager/pub/update updateDependency replaces one-line value 1`] = `
"dev_dependencies:
  test: 0.1
  build:
    version: 0.1

dependencies:
  bar:
    sdk: flatter
  foo: 1.2.3
  bar:
    version: 1
  baz:
    non-sense: true
  qux: false
"
`;
